# proyecto-paradigmas-2021

./: .gitignore  README.md
proyecto-estructurado/: CMakeLists.txt
proyecto-estructurado/source/: CMakeLists.txt
proyecto-estructurado/source/include/: Casilla.h  SaltoDeCaballo.h  Tablero.h  VectorSalto.h  benchmark.h  board_basics.h  board_graphics.h  board_logic.h  board_mem.h  flags_util.h  macro_utils.h
proyecto-estructurado/source/src/: Resolucion.c  benchmark.c  board_graphics.c  board_logic.c  board_mem.c  flags_util.c  main.c  source.c
proyecto-funcional/: schemeProyect.rkt
proyecto-logico/: proyecto-logico.spj
proyecto-objetos/: Program.cs  proyecto-objetos.sln  proyectoParadigmas.csproj  proyectoParadigmas.sln
proyecto-objetos/Data/: ListaDeSoluciones.cs
proyecto-objetos/Logic/: Casilla.cs  Metodo.cs  Recursivo.cs  SaltoDeCaballo.cs  Tablero.cs  WarnsDorff.cs
proyecto-objetos/Menu.Presentation/: Controller.cs  Model.cs  View.Designer.cs  View.cs
proyecto-objetos/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
proyecto-objetos/Recorrido.presentation/: Controller.cs  Model.cs  View.Designer.cs  View.cs
proyecto-objetos/proyecto-objetos/: Form1.Designer.cs  Form1.cs  Program.cs  proyecto-objetos.csproj
